--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '2'
 services:
   php:
-    build: ./php
+    build: ./devops/php
     depends_on:
       - db
     ports:
       - 80:80
+      - 443:443
   db:
-    image: mysql
+    build: ./devops/db
     environment:
       - MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE
