--- a/devops/sonar/docker-compose.yml
+++ b/devops/sonar/docker-compose.yml
@@ -5,17 +5,15 @@ services:
     ports:
       - "9000:9000"
     environment:
-      - SONARQUBE_JDBC_URL=jdbc:mysql://mysql:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false
+      - SONARQUBE_JDBC_URL=jdbc:mysql://db:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false
       - SONARQUBE_JDBC_USERNAME=sonar
-      - SONARQUBE_JDBC_PASSWORD=sonar
+      - SONARQUBE_JDBC_PASSWORD=rpXD7es7cNSEmMML
     links:
-      - mysql
-  mysql:
+      - db
+  db:
     image: mysql
-    ports:
-      - "3306:3306"
     environment:
       - MYSQL_DATABASE=sonar
-      - MYSQL_ROOT_PASSWORD=sonar
+      - MYSQL_ROOT_PASSWORD=692A5Rww7Q97JwM6
       - MYSQL_USER=sonar
-      - MYSQL_PASSWORD=sonar
+      - MYSQL_PASSWORD=rpXD7es7cNSEmMML
