shared .env file for service, sonar, nexus

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,9 @@ MYSQL_ROOT_PASSWORD=dbsCb7g4YbQvsbY7
 MYSQL_DATABASE=attlas
 MYSQL_USER=attlas
 MYSQL_PASSWORD=xkEXWPFrvQNEUp7P
+
+
+SONARQUBE_DATABASE=sonar
+SONARQUBE_ROOT_PASSWORD=692A5Rww7Q97JwM6
+SONARQUBE_USERNAME=sonar
+SONARQUBE_PASSWORD=rpXD7es7cNSEmMML
