--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,10 @@
+SERVICE_HOST=domain.com
+SERVICE_HOST_EMAIL=admin@domain.com
+
 MYSQL_ROOT_PASSWORD=dbsCb7g4YbQvsbY7
 MYSQL_DATABASE=attlas
 MYSQL_USER=attlas
 MYSQL_PASSWORD=xkEXWPFrvQNEUp7P
-
 
 SONARQUBE_DATABASE=sonar
 SONARQUBE_ROOT_PASSWORD=692A5Rww7Q97JwM6
