Jenkins file skeleton

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-SERVICE_HOST=domain.com
-SERVICE_HOST_EMAIL=admin@domain.com
+SERVICE_DOMAIN=domain.com
+SERVICE_DOMAIN_EMAIL=admin@domain.com
 
 MYSQL_ROOT_PASSWORD=dbsCb7g4YbQvsbY7
 MYSQL_DATABASE=attlas
