--- a/devops/apache.conf
+++ b/devops/apache.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
 
-  ServerName SERVICE_HOST
+  ServerName %SERVICE_DOMAIN%
 
-  ServerAdmin SERVICE_HOST_EMAIL
-  DocumentRoot /var/www/SERVICE_HOST
+  ServerAdmin %SERVICE_DOMAIN_EMAIL%
+  DocumentRoot /var/www/%SERVICE_DOMAIN%
 
-  <Directory /var/www/SERVICE_HOST>
+  <Directory /var/www/%SERVICE_DOMAIN%>
     Options -Indexes +FollowSymLinks +MultiViews
     Order Allow,Deny
     Allow from all
