--- a/devops/php/Dockerfile
+++ b/devops/php/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.1.7-apache
 
-ARG SERVICE_HOST
-ENV SERVICE_HOST $SERVICE_HOST
+ARG SERVICE_DOMAIN
+ENV SERVICE_DOMAIN $SERVICE_DOMAIN
 
 RUN apt-get update && \
     apt-get install -y mc mysql-client && \
@@ -9,13 +9,13 @@ RUN apt-get update && \
 
 #COPY php.ini /usr/local/etc/php
 
-RUN mkdir /var/www/$SERVICE_HOST
-COPY ./dist /var/www/$SERVICE_HOST
-RUN chown www-data:www-data -R /var/www/$SERVICE_HOST
-RUN chmod u=rwX,g=srX,o=rX -R /var/www/$SERVICE_HOST
+RUN mkdir /var/www/$SERVICE_DOMAIN
+COPY ./dist /var/www/$SERVICE_DOMAIN
+RUN chown www-data:www-data -R /var/www/$SERVICE_DOMAIN
+RUN chmod u=rwX,g=srX,o=rX -R /var/www/$SERVICE_DOMAIN
 
-COPY ./$SERVICE_HOST.conf /etc/apache2/sites-available
+COPY ./$SERVICE_DOMAIN.conf /etc/apache2/sites-available
 RUN a2dissite 000-default.conf
-RUN a2ensite $SERVICE_HOST.conf
+RUN a2ensite $SERVICE_DOMAIN.conf
 
 EXPOSE 443
