--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,14 @@
-SERVICE_DOMAIN=domain.com
-SERVICE_DOMAIN_EMAIL=admin@domain.com
+SERVICE_NAME=example
+SERVICE_DOMAIN=example.com
+SERVICE_DOMAIN_EMAIL=admin@example.com
+
+SERVICE_ID=com.example.mclient
+SERVICE_DESC=XaaS - example.com
+SERVICE_VERSION=latest
 
 MYSQL_ROOT_PASSWORD=dbsCb7g4YbQvsbY7
-MYSQL_DATABASE=attlas
-MYSQL_USER=attlas
+MYSQL_DATABASE=example
+MYSQL_USER=example
 MYSQL_PASSWORD=xkEXWPFrvQNEUp7P
 
 SONARQUBE_DATABASE=sonar
