--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@ SERVICE_DOMAIN=example.com
 SERVICE_DOMAIN_EMAIL=admin@example.com
 
 SERVICE_ID=com.example.mclient
-SERVICE_DESC=XaaS - example.com
+SERVICE_DESC="XaaS - example.com"
 SERVICE_VERSION=latest
 
 MYSQL_ROOT_PASSWORD=dbsCb7g4YbQvsbY7
