--- a/service.yml
+++ b/service.yml
@@ -5,7 +5,7 @@ services:
       context: ./devops/php
       args:
         - SERVICE_DOMAIN
-    image: ${SERVICE_NAME}-web
+    image: ${COMPOSE_PROJECT_NAME}-web
     depends_on:
       - db
     ports:
@@ -14,7 +14,7 @@ services:
   db:
     build: 
       context: ./devops/db
-    image: ${SERVICE_NAME}-db
+    image: ${COMPOSE_PROJECT_NAME}-db
     environment:
       - MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE
