--- a/attlas.yml
+++ b/attlas.yml
@@ -1,29 +1,54 @@
 version: '3'
+
+networks:
+  service-network:
+
 services:
   lb:
     build:
       context: ./cidd/lb
       args:
-        - XAAS_DOMAIN
+        - SERVICE_DOMAIN
     image: ${COMPOSE_PROJECT_NAME}-lb
+    networks:
+      - service-network
     ports:
       - 80:80
       - 443:443
     depends_on:
       - static
+      - service
   static:
     build:
       context: ./cidd/static
     image: ${COMPOSE_PROJECT_NAME}-static
+    networks:
+      - service-network
   service:
+    build:
+      context: ./cidd/service
+    image: ${COMPOSE_PROJECT_NAME}-service
+    networks:
+      - service-network
+    depends_on:
+      - rdbms
+      - graphdb
   rdbms:
-    build: 
-      context: ./cidd/db
-    image: ${COMPOSE_PROJECT_NAME}-db
+    build:
+      context: ./cidd/rdbms
+    image: ${COMPOSE_PROJECT_NAME}-rdbms
+    networks:
+      - service-network
     environment:
-      - MYSQL_ROOT_PASSWORD
-      - MYSQL_DATABASE
-      - MYSQL_USER
-      - MYSQL_PASSWORD
-
+      - MYSQL_ROOT_PASSWORD=${SERVICE_RDBMS_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${SERVICE_RDBMS_DATABASE}
+      - MYSQL_USER=${SERVICE_RDBMS_USER}
+      - MYSQL_PASSWORD=${SERVICE_RDBMS_PASSWORD}
   graphdb:
+    build: 
+      context: ./cidd/graphdb
+    image: ${COMPOSE_PROJECT_NAME}-graphdb
+    networks:
+      - service-network
+    volumes:
+      - "${SERVICE_HOME}/neo4j-data:/data"
