--- a/cidd/sonarqube.yml
+++ b/cidd/sonarqube.yml
@@ -6,8 +6,8 @@ services:
       - "9000:9000"
     environment:
       - SONARQUBE_JDBC_URL=jdbc:mysql://sonarqube_db:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false
-      - SONARQUBE_JDBC_USERNAME=${SONARQUBE_USERNAME}
-      - SONARQUBE_JDBC_PASSWORD=${SONARQUBE_PASSWORD}
+      - SONARQUBE_JDBC_USERNAME=${SONARQUBE_DB_USERNAME}
+      - SONARQUBE_JDBC_PASSWORD=${SONARQUBE_DB_PASSWORD}
     links:
       - sonarqube_db
   sonarqube_db:
@@ -15,5 +15,5 @@ services:
     environment:
       - MYSQL_DATABASE=${SONARQUBE_DATABASE}
       - MYSQL_ROOT_PASSWORD=${SONARQUBE_ROOT_PASSWORD}
-      - MYSQL_USER=${SONARQUBE_USERNAME}
-      - MYSQL_PASSWORD=${SONARQUBE_PASSWORD}
+      - MYSQL_USER=${SONARQUBE_DB_USERNAME}
+      - MYSQL_PASSWORD=${SONARQUBE_DB_PASSWORD}
