--- a/cidd/static/Dockerfile
+++ b/cidd/static/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.13.5
 
-ARG XAAS_DOMAIN
-ENV XAAS_DOMAIN $XAAS_DOMAIN
+ARG SERVICE_DOMAIN
+ENV SERVICE_DOMAIN $SERVICE_DOMAIN
 
 COPY ./dist/ /usr/share/nginx/html/
