simple service java app

--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,44 @@
-COMPOSE_PROJECT_NAME=example
+COMPOSE_PROJECT_NAME=attlas
 
-SERVICE_DOMAIN=example.com
-SERVICE_DOMAIN_EMAIL=admin@example.com
+SERVICE_DOMAIN=attlas.com
+SERVICE_DOMAIN_EMAIL=support@attlas.com
 
-SERVICE_ID=com.example.mclient
-SERVICE_DESC="XaaS - example.com"
-SERVICE_VERSION=latest
+SERVICE_ID=com.attlas.mobile.client
+SERVICE_DESC="SERVICE - attlas.com"
+SERVICE_VERSION=1.0.0
 
-MYSQL_ROOT_PASSWORD=dbsCb7g4YbQvsbY7
-MYSQL_DATABASE=example
-MYSQL_USER=example
-MYSQL_PASSWORD=xkEXWPFrvQNEUp7P
+SERVICE_HOME=/var/local/attlas
 
+# load balancer
+LB_STATIC_NAME=static
+LB_STATIC_NUM=2
+LB_SERVICE_NAME=service
+LB_SERVICE_NUM=2
+
+# service
+## rdbms
+SERVICE_RDBMS_ROOT_PASSWORD=dbsCb7g4YbQvsbY7
+SERVICE_RDBMS_DATABASE=attlas
+SERVICE_RDBMS_USER=attlas
+SERVICE_RDBMS_PASSWORD=xkEXWPFrvQNEUp7P
+
+## graph
+SERVICE_GRAPHDB_ROOT_PASSWORD=
+
+## email server
+
+# jenkins
+JENKINS_ADMIN_USER=vladyslav.kurmaz
+JENKINS_ADMIN_PASSWORD=TI2z3Xeqq4sPMGj9
+
+# nexus3
+NEXUS_ADMIN_PASSWORD=YGkZ88XLG5hCrzPz
+
+# sonarqube
+SONARQUBE_ADMIN_PASSWORD=4cW92gM2zuk6cBXp
+
+## database
 SONARQUBE_DATABASE=sonar
 SONARQUBE_ROOT_PASSWORD=692A5Rww7Q97JwM6
-SONARQUBE_USERNAME=sonar
-SONARQUBE_PASSWORD=rpXD7es7cNSEmMML
+SONARQUBE_DB_USERNAME=sonar
+SONARQUBE_DB_PASSWORD=rpXD7es7cNSEmMML
