--- a/cidd/service/Dockerfile
+++ b/cidd/service/Dockerfile
@@ -1,1 +1,8 @@
 FROM openjdk:8u131-jre-alpine
+
+ARG SERVICE_ARTIFACT
+ENV SERVICE_ARTIFACT $SERVICE_ARTIFACT
+
+COPY ./dist/${SERVICE_ARTIFACT} /
+EXPOSE 8182
+CMD java -jar /${SERVICE_ARTIFACT}
