java service, fix for docker stop

--- a/cidd/service/Dockerfile
+++ b/cidd/service/Dockerfile
@@ -1,8 +1,11 @@
 FROM openjdk:8u131-jre-alpine
 
 ARG SERVICE_ARTIFACT
+ARG SERVICE_HOSTNAME
+
 ENV SERVICE_ARTIFACT $SERVICE_ARTIFACT
+ENV SERVICE_HOSTNAME $SERVICE_HOSTNAME
 
 COPY ./dist/${SERVICE_ARTIFACT} /
 EXPOSE 8182
-CMD java -jar /${SERVICE_ARTIFACT}
+CMD exec java -jar /${SERVICE_ARTIFACT}
