--- a/cidd/Jenkinsfile
+++ b/cidd/Jenkinsfile
@@ -4,17 +4,17 @@ pipeline {
   stages {
     stage('Configure') {
       steps {
-/*/
-        sh '''
-          cp ./.env.template ./.env
-          sed -i "/COMPOSE_PROJECT_NAME=/ s/=.*/=$COMPOSE_PROJECT_NAME/" ./.env
-          sed -i "/SERVICE_DOMAIN=/ s/=.*/=$SERVICE_DOMAIN/" ./.env
-          sed -i "/SERVICE_DOMAIN_EMAIL=/ s/=.*/=$SERVICE_DOMAIN_EMAIL/" ./.env
-          sed -i "/SERVICE_ID=/ s/=.*/=$SERVICE_ID/" ./.env
-          sed -i "/SERVICE_DESC=/ s/=.*/=\\"$SERVICE_DESC\\"/" ./.env
-          cat ./.env
-        '''
-/*/
+//
+//        sh '''
+//          cp ./.env.template ./.env
+//          sed -i "/COMPOSE_PROJECT_NAME=/ s/=.*/=$COMPOSE_PROJECT_NAME/" ./.env
+//          sed -i "/SERVICE_DOMAIN=/ s/=.*/=$SERVICE_DOMAIN/" ./.env
+//          sed -i "/SERVICE_DOMAIN_EMAIL=/ s/=.*/=$SERVICE_DOMAIN_EMAIL/" ./.env
+//          sed -i "/SERVICE_ID=/ s/=.*/=$SERVICE_ID/" ./.env
+//          sed -i "/SERVICE_DESC=/ s/=.*/=\\"$SERVICE_DESC\\"/" ./.env
+//          cat ./.env
+//        '''
+//
       }
     }
     stage('Build') {
