--- a/cidd/Jenkinsfile
+++ b/cidd/Jenkinsfile
@@ -24,9 +24,9 @@ node {
   echo "org: ${org} repo: ${repo}"
   //
   sh '''cp ./.env.template ./.env'''
-  sh '''sed -i "/SERVICE_PORT=/ s/=.*/=8182/" ./.env'''
+  //sh '''sed -i "/SERVICE_PORT=/ s/=.*/=8182/" ./.env'''
 
-  load "./.env"
+  //load "./.env"
 
 //          sed -i "/COMPOSE_PROJECT_NAME=/ s/=.*/=$COMPOSE_PROJECT_NAME/" ./.env
 //          sed -i "/SERVICE_DOMAIN=/ s/=.*/=$SERVICE_DOMAIN/" ./.env
@@ -60,4 +60,4 @@ node {
     stage('Cleanup') {
       echo 'Cleanup'
     }
-  }
+}
