--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=attlas-portal
 sonar.projectName=attlas-portal
 sonar.projectVersion=17.11.0-SNAPSHOT
-sonar.sources=bundle/src
-sonar.binaries=bundle/target/classes
-sonar.exclusions=bundle/src/**/*.test.js,bundle/src/test/**
+sonar.sources=service/src
+sonar.binaries=service/target/classes
+sonar.exclusions=service/src/**/*.test.js,service/src/test/**
 
 # Java coverage report
 #sonar.java.test.binaries=bundle/target/test-classes
