--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,6 +10,7 @@
 
   <properties>
     <jersey.version>2.17</jersey.version>
+    <surefire.version>2.20</surefire.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -49,6 +50,87 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.9</version>
+        <executions>
+          <!--
+                      Prepares the property pointing to the JaCoCo runtime agent which
+                      is passed as VM argument when Maven the Surefire plugin is executed.
+                    -->
+          <execution>
+            <id>pre-unit-test</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+              <!-- Sets the path to the file which contains the execution data. -->
+              <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+              <!--<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>-->
+              <!--
+                              Sets the name of the property containing the settings
+                              for JaCoCo runtime agent.
+                            -->
+              <propertyName>surefireArgLine</propertyName>
+            </configuration>
+          </execution>
+          <!--
+                      Ensures that the code coverage report for unit tests is created after
+                      unit tests have been run.
+                    -->
+          <execution>
+            <id>post-unit-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <configuration>
+              <!-- Sets the path to the file which contains the execution data. -->
+              <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+              <!-- Sets the output directory for the code coverage report. -->
+              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${surefire.version}</version>
+        <dependencies>
+          <!-- dmaslenko: added this dependency to fix a problem with running of spock unit tests.
+                              See details https://stackoverflow.com/questions/2021771/surefire-is-not-picking-up-junit-4-tests-->
+          <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit4</artifactId>
+            <version>${surefire.version}</version>
+          </dependency>
+          <!-- dmaslenko: added this dependency to run testng unit tests. -->
+          <!--dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-testng</artifactId>
+            <version>${surefire.version}</version>
+          </dependency-->
+        </dependencies>
+        <configuration>
+          <!-- Sets the VM argument line used when unit tests are run. -->
+          <argLine>${surefireArgLine}</argLine>
+          <properties>
+            <!-- dmaslenk: because I have 2 tests providers to avoid running JUnit tests
+                             within surefire-testng provider we set property junit=false. -->
+            <!--property>
+              <name>junit</name>
+              <value>false</value>
+            </property-->
+          </properties>
+          <!--suiteXmlFiles>
+            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+          </suiteXmlFiles-->
+        </configuration>
+      </plugin>
+
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
