--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,12 +6,12 @@ sonar.binaries=service/target/classes
 sonar.exclusions=service/src/**/*.test.js,service/src/test/**
 
 # Java coverage report
-#sonar.java.test.binaries=bundle/target/test-classes
-#sonar.java.binaries=bundle/target/classes
-#sonar.java.libraries=bundle/target/lib
-#sonar.jacoco.reportPath=bundle/target/coverage-reports/jacoco-ut.exec
-#sonar.junit.reportsPath=bundle/target/surefire-reports
-#sonar.java.coveragePlugin=jacoco
+sonar.java.test.binaries=service/target/test-classes
+sonar.java.binaries=service/target/classes
+#sonar.java.libraries=service/target/lib
+sonar.jacoco.reportPath=service/target/coverage-reports/jacoco-ut.exec
+sonar.junit.reportsPath=service/target/surefire-reports
+sonar.java.coveragePlugin=jacoco
 
 # JS coverage reporting
 #sonar.javascript.lcov.reportPath=bundle/target/coverage/report-lcov/lcov.info
