--- a/cidd/Jenkinsfile
+++ b/cidd/Jenkinsfile
@@ -44,7 +44,7 @@ node {
       def scannerHome = tool 'SonarQube Scanner 3.0.3';
       withSonarQubeEnv('Attlas SonarQube instance') {
         if (pullRequest){
-          sh "${scannerHome}/bin/sonar-scanner -Dsonar.analysis.mode=preview -Dsonar.github.pullRequest=${ghprbPullId} -Dsonar.github.repository=${org}/${repo} -Dsonar.github.endpoint=https://github.bmc.com/api/v3 -Dsonar.github.oauth=${GITHUB_ACCESS_TOKEN} -Dsonar.login=${SONARQUBE_ACCESS_TOKEN}"
+          sh "${scannerHome}/bin/sonar-scanner -Dsonar.analysis.mode=preview -Dsonar.github.pullRequest=${ghprbPullId} -Dsonar.github.repository=${org}/${repo} -Dsonar.github.oauth=${GITHUB_ACCESS_TOKEN} -Dsonar.login=${SONARQUBE_ACCESS_TOKEN}"
         } else {
           sh "${scannerHome}/bin/sonar-scanner"
         }
