api java service structure refactoring

--- a/static/web/package.json
+++ b/static/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "attlas",
-  "version": "1.0.0",
+  "version": "18.1.0-SNAPSHOT",
   "private": true,
   "description": "Attlas",
   "scripts": {
