--- a/services/api/pom.xml
+++ b/services/api/pom.xml
@@ -2,11 +2,11 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.attlas.xaas</groupId>
-  <artifactId>service</artifactId>
+  <groupId>com.attlas</groupId>
+  <artifactId>api</artifactId>
   <packaging>jar</packaging>
-  <version>17.11.0-SNAPSHOT</version>
-  <name>service</name>
+  <version>18.1.0-SNAPSHOT</version>
+  <name>api</name>
 
   <properties>
     <jersey.version>2.17</jersey.version>
@@ -150,7 +150,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>com.attlas.xaas.Main</mainClass>
+              <mainClass>com.attlas.api.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -189,7 +189,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.attlas.xaas.Main</mainClass>
+          <mainClass>com.attlas.api.Main</mainClass>
         </configuration>
       </plugin>
     </plugins>
