retored servce claster: lb/web(n)/api(n)/rdbms/graphdb

--- a/services/lb/Dockerfile
+++ b/services/lb/Dockerfile
@@ -1,6 +1,27 @@
 FROM nginx:1.13.5
 
-ARG PROJECT_DOMAIN
-ENV PROJECT_DOMAIN $PROJECT_DOMAIN
+ARG COMPOSE_PROJECT_NAME
+ARG LB_STATIC_WEB_NAME
+ARG LB_STATIC_WEB_NUM
+ARG LB_SERVICES_API_NAME
+ARG LB_SERVICES_API_NUM
+ARG WEB_PORT
+ARG WEB_PORTS
+ARG API_PORT
 
-COPY ./dist/nginx.conf /etc/nginx/nginx.conf
+ENV COMPOSE_PROJECT_NAME $COMPOSE_PROJECT_NAME
+ENV LB_STATIC_WEB_NAME $LB_STATIC_WEB_NAME
+ENV LB_STATIC_WEB_NUM $LB_STATIC_WEB_NUM
+ENV LB_SERVICES_API_NAME $LB_SERVICES_API_NAME
+ENV LB_SERVICES_API_NUM $LB_SERVICES_API_NUM
+ENV WEB_PORT $WEB_PORT
+ENV WEB_PORTS $WEB_PORTS
+ENV API_PORT $API_PORT
+
+
+COPY ./nginx.conf.template /nginx.conf
+COPY ./configure.sh /configure.sh
+RUN /configure.sh
+RUN cp /nginx.conf /etc/nginx/nginx.conf
+
+
