--- a/services/api/pom.xml
+++ b/services/api/pom.xml
@@ -9,8 +9,8 @@
   <name>api</name>
 
   <properties>
-    <jersey.version>2.17</jersey.version>
-    <surefire.version>2.20</surefire.version>
+    <jersey.version>2.26</jersey.version>
+    <surefire.version>2.20.1</surefire.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -27,24 +27,33 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- [+] Jersey -->
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-grizzly2-http</artifactId>
+      <version>${jersey.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.glassfish.jersey.media</groupId>
-      <artifactId>jersey-media-moxy</artifactId>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <version>${jersey.version}</version>
     </dependency>
+    <!-- [-] Jersey -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.9</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
+    </dependency>
+    <dependency>
+      <groupId>com.owlike</groupId>
+      <artifactId>genson</artifactId>
+      <version>1.4</version>
     </dependency>
   </dependencies>
 
