Added client as subtree from talan

--- a/.env.template
+++ b/.env.template
@@ -12,8 +12,8 @@ PROJECT_HOME=/var/local/attlas
 
 # services
 ## load balancer
-LB_STATIC_WEB_NAME=web
-LB_STATIC_WEB_NUM=2
+LB_STATIC_CLIENT_NAME=CLIENT
+LB_STATIC_CLIENT_NUM=2
 LB_SERVICES_API_NAME=api
 LB_SERVICES_API_NUM=2
 
@@ -23,9 +23,10 @@ API_HOSTNAME=0.0.0.0
 API_PORT=8182
 
 # static
-## web
-WEB_PORT=80
-WEB_PORTS=443
+## client
+CLIENT_HOSTNAME=0.0.0.0
+CLIENT_PORT=80
+CLIENT_PORTS=443
 
 # bds
 ## rdbms
