--- a/services/lb/Dockerfile
+++ b/services/lb/Dockerfile
@@ -1,21 +1,21 @@
-FROM nginx:1.13.5
+FROM nginx:1.13.9
 
 ARG COMPOSE_PROJECT_NAME
-ARG LB_STATIC_WEB_NAME
-ARG LB_STATIC_WEB_NUM
+ARG LB_STATIC_CLIENT_NAME
+ARG LB_STATIC_CLIENT_NUM
 ARG LB_SERVICES_API_NAME
 ARG LB_SERVICES_API_NUM
-ARG WEB_PORT
-ARG WEB_PORTS
+ARG CLIENT_PORT
+ARG CLIENT_PORTS
 ARG API_PORT
 
 ENV COMPOSE_PROJECT_NAME $COMPOSE_PROJECT_NAME
-ENV LB_STATIC_WEB_NAME $LB_STATIC_WEB_NAME
-ENV LB_STATIC_WEB_NUM $LB_STATIC_WEB_NUM
+ENV LB_STATIC_CLIENT_NAME $LB_STATIC_CLIENT_NAME
+ENV LB_STATIC_CLIENT_NUM $LB_STATIC_CLIENT_NUM
 ENV LB_SERVICES_API_NAME $LB_SERVICES_API_NAME
 ENV LB_SERVICES_API_NUM $LB_SERVICES_API_NUM
-ENV WEB_PORT $WEB_PORT
-ENV WEB_PORTS $WEB_PORTS
+ENV CLIENT_PORT $CLIENT_PORT
+ENV CLIENT_PORTS $CLIENT_PORTS
 ENV API_PORT $API_PORT
 
 
