--- a/static/client/Dockerfile
+++ b/static/client/Dockerfile
@@ -1,11 +1,11 @@
 FROM nginx:1.13.9
 
-ARG STATIC_ANGULAR_HOSTNAME
-ARG STATIC_ANGULAR_PORT
-ARG STATIC_ANGULAR_PORTS
+ARG CLIENT_HOSTNAME
+ARG CLIENT_PORT
+ARG CLIENT_PORTS
 
-ENV STATIC_ANGULAR_HOSTNAME $STATIC_ANGULAR_HOSTNAME
-ENV STATIC_ANGULAR_PORT $STATIC_ANGULAR_PORT
-ENV STATIC_ANGULAR_PORTS $STATIC_ANGULAR_PORTS
+ENV CLIENT_HOSTNAME $CLIENT_HOSTNAME
+ENV CLIENT_PORT $CLIENT_PORT
+ENV CLIENT_PORTS $CLIENT_PORTS
 
 COPY ./dist/ /usr/share/nginx/html/
