--- a/static/client/package.json
+++ b/static/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tln-angular",
+  "name": "attlas-static-client",
   "version": "18.3.0-SNAPSHOT",
   "license": "MIT",
   "scripts": {
