--- a/static/client/sonar-project.properties
+++ b/static/client/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.host.url=http://159.65.230.204:9000
 sonar.login=7fbc41a59be794cd1931ce10948a8aab7a8697ff
 
-sonar.projectKey=tln-angular
-sonar.projectName=tln-angular
+sonar.projectKey=attlas-static-client
+sonar.projectName=attlas-static-client
 sonar.projectVersion=18.3.0-SNAPSHOT
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
