--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,27 +9,31 @@ services:
       context: ./services/lb
       args:
         - COMPOSE_PROJECT_NAME
-        - LB_STATIC_WEB_NAME
-        - LB_STATIC_WEB_NUM
+        - LB_STATIC_CLIENT_NAME
+        - LB_STATIC_CLIENT_NUM
         - LB_SERVICES_API_NAME
         - LB_SERVICES_API_NUM
-        - WEB_PORT
-        - WEB_PORTS
+        - CLIENT_PORT
+        - CLIENT_PORTS
         - API_PORT
     image: ${COMPOSE_PROJECT_NAME}-lb
     networks:
       - attlas-network
     ports:
-      - ${WEB_PORT}:${WEB_PORT}
-      - ${WEB_PORTS}:${WEB_PORTS}
+      - ${CLIENT_PORT}:${CLIENT_PORT}
+      - ${CLIENT_PORTS}:${CLIENT_PORTS}
       - ${API_PORT}:${API_PORT}
     depends_on:
-      - web
+      - client
       - api
-  web:
+  client:
     build:
-      context: ./static/web
-    image: ${COMPOSE_PROJECT_NAME}-web
+      context: ./static/client
+      args:
+        - CLIENT_HOSTNAME
+        - CLIENT_PORT
+        - CLIENT_PORTS
+    image: ${COMPOSE_PROJECT_NAME}-client
     networks:
       - attlas-network
   api:
