auth .env parameters, cordova corrent app id

--- a/services/auth/.env.template
+++ b/services/auth/.env.template
@@ -1,4 +1,7 @@
-STATIC_AUTH_HOSTNAME=0.0.0.0
+STATIC_AUTH_HOSTNAME=localhost
 STATIC_AUTH_PORT=8080
 STATIC_AUTH_PORTS=8443
 
+STATIC_AUTH_SECRET=
+STATIC_AUTH_PUBLIC_KEY=
+STATIC_AUTH_SECRET_KEY=
