--- a/mobile/cordova/package.json
+++ b/mobile/cordova/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "helloworld",
-    "displayName": "HelloCordova",
-    "version": "1.0.0",
-    "description": "A sample Apache Cordova application that responds to the deviceready event.",
+    "name": "attlas",
+    "displayName": "@atlas",
+    "version": "18.3.0-SNAPSHOT",
+    "description": "@tlas - social collaboration platform",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Apache Cordova Team",
+    "author": "Vladyslav Kurmaz <vladislav.kurmaz@gmail.com>",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "^7.1.0",
+        "cordova-android": "^7.0.0",
         "cordova-browser": "^5.0.3",
         "cordova-plugin-whitelist": "^1.3.3"
     },
@@ -19,8 +19,8 @@
             "cordova-plugin-whitelist": {}
         },
         "platforms": [
-            "android",
-            "browser"
+            "browser",
+            "android"
         ]
     }
 }
