--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -10,12 +10,22 @@
   },
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon NODE_ENV=development nodemon --watch src/**/*.js --inspect ./src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.16.1",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "oauthio": "^0.3.5"
+    "memory-cache": "^0.2.0",
+    "npm": "^5.8.0",
+    "oauthio": "^0.3.5",
+    "randomstring": "^1.1.5",
+    "session-file-store": "^1.2.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
