--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "cors": "^2.8.4",
+    "csurf": "^1.9.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "helmet": "^3.12.0",
     "memory-cache": "^0.2.0",
     "npm": "^5.8.0",
     "oauthio": "^0.3.5",
