ngx-charts + Jenkinsfile

--- a/.env.template
+++ b/.env.template
@@ -22,9 +22,9 @@ SERVICES_AUTH_HOST=localhost
 SERVICES_AUTH_PORT=8080
 SERVICES_AUTH_PORTS=8443
 
-SERVICES_AUTH_SECRET=
-SERVICES_AUTH_PUBLIC_KEY=
-SERVICES_AUTH_SECRET_KEY=
+SERVICES_AUTH_SECRET=${SERVICES_AUTH_SECRET}
+SERVICES_AUTH_PUBLIC_KEY=${SERVICES_AUTH_PUBLIC_KEY}
+SERVICES_AUTH_SECRET_KEY=${SERVICES_AUTH_SECRET_KEY}
 ## [-] AUTH
 
 ## [+] API
