--- a/static/client/package.json
+++ b/static/client/package.json
@@ -12,19 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "^5.2.7",
+    "@angular/common": "^5.2.7",
+    "@angular/compiler": "^5.2.7",
+    "@angular/core": "^5.2.7",
+    "@angular/forms": "^5.2.7",
+    "@angular/http": "^5.2.7",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.7",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@swimlane/ngx-charts": "^7.2.0",
     "@types/facebook-js-sdk": "^2.8.3",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "d3": "^5.0.0",
     "intl": "^1.2.5",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
