SonarQube shell script

--- a/.env.template
+++ b/.env.template
@@ -19,12 +19,13 @@ LB_SERVICES_API_NUM=2
 
 ## [+] AUTH
 SERVICES_AUTH_HOST=localhost
+SERVICES_AUTH_LSTN=0.0.0.0
 SERVICES_AUTH_PORT=8080
 SERVICES_AUTH_PORTS=8443
 
-SERVICES_AUTH_SECRET=${SERVICES_AUTH_SECRET}
-SERVICES_AUTH_PUBLIC_KEY=${SERVICES_AUTH_PUBLIC_KEY}
-SERVICES_AUTH_SECRET_KEY=${SERVICES_AUTH_SECRET_KEY}
+SERVICES_AUTH_SECRET=
+SERVICES_AUTH_PUBLIC_KEY=
+SERVICES_AUTH_SECRET_KEY=
 ## [-] AUTH
 
 ## [+] API
@@ -56,3 +57,7 @@ DBS_RDBMS_PASSWORD=xkEXWPFrvQNEUp7P
 #SERVICE_GRAPHDB_ROOT_PASSWORD=
 
 ## email server
+
+# [+] SonarQube
+SONARQUBE_HOST=
+SONARQUBE_TOKEN=
