--- a/services/comparator/package.json
+++ b/services/comparator/package.json
@@ -16,17 +16,25 @@
     "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "express-session": "1.15.6",
     "npm": "^6.0.0",
-    "request": "^2.85.0",
-    "session-file-store": "^1.2.0",
+    "request": "2.85.0",
+    "session-file-store": "1.2.0",
     "to": "^0.2.9",
     "update": "^0.7.4"
   },
   "devDependencies": {
-    "jasmine": "^3.1.0",
-    "nodemon": "^1.17.3"
+    "jasmine": "3.1.0",
+    "jasmine-core": "3.1.0",
+    "karma": "2.0.2",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.2",
+    "karma-jasmine": "1.1.2",
+    "karma-requirejs": "1.1.0",
+    "nodemon": "1.17.3",
+    "puppeteer": "1.3.0",
+    "requirejs": "2.3.5"
   }
 }
