--- a/.env.template
+++ b/.env.template
@@ -34,11 +34,11 @@ SERVICES_API_HOST=localhost
 SERVICES_API_PORT=8081
 ## [-] API
 
-## [+] COMPARATOR
-SERVICES_COMPARATOR_HOST=localhost
-SERVICES_COMPARATOR_LSTN=0.0.0.0
-SERVICES_COMPARATOR_PORT=8082
-## [-] COMPARATOR
+## [+] CORRELATOR
+SERVICES_CORRELATOR_HOST=localhost
+SERVICES_CORRELATOR_LSTN=0.0.0.0
+SERVICES_CORRELATOR_PORT=8082
+## [-] CORRELATOR
 
 # [+] SERVICES
 
