--- a/services/correlator/.env.template
+++ b/services/correlator/.env.template
@@ -1,4 +1,4 @@
-SERVICES_NODEJS_HOST=${SERVICES_NODEJS_HOST}
-SERVICES_NODEJS_LSTN=${SERVICES_NODEJS_LSTN}
-SERVICES_NODEJS_PORT=${SERVICES_NODEJS_PORT}
-SERVICES_NODEJS_PORTS=${SERVICES_NODEJS_PORTS}
+#SERVICES_CORRELATOR_HOST=${SERVICES_CORRELATOR_HOST}
+#SERVICES_CORRELATOR_LSTN=${SERVICES_CORRELATOR_LSTN}
+#SERVICES_CORRELATOR_PORT=${SERVICES_CORRELATOR_PORT}
+#SERVICES_CORRELATOR_PORTS=${SERVICES_CORRELATOR_PORTS}
