--- a/services/correlator/package.json
+++ b/services/correlator/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "talan-tln-nodejs",
+  "name": "attlas-collerator",
   "version": "18.5.0",
-  "description": "talan-tln-nodejs",
+  "description": "attlas-correlator",
   "license": "MIT",
   "author": "Vladyslav Kurmaz <vladislav.kurmaz@gmail.com>",
   "repository": {
