update static/client to angular6

--- a/static/client/src/tsconfig.spec.json
+++ b/static/client/src/tsconfig.spec.json
@@ -6,12 +6,12 @@
     "module": "commonjs",
     "types": [
       "jasmine",
-      "node",
-      "facebook-js-sdk"
+      "node"
     ]
   },
   "files": [
-    "test.ts"
+    "test.ts",
+    "polyfills.ts"
   ],
   "include": [
     "**/*.spec.ts",
