--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -1,26 +1,17 @@
 FROM node:9.10.1-alpine
 
-ARG STATIC_AUTH_HOSTNAME
-ARG STATIC_AUTH_PORT
-ARG STATIC_AUTH_PORTS
-
-ENV STATIC_AUTH_HOSTNAME $STATIC_AUTH_HOSTNAME
-ENV STATIC_AUTH_PORT $STATIC_AUTH_PORT
-ENV STATIC_AUTH_PORTS $STATIC_AUTH_PORTS
-
-
 # Create app directory
 WORKDIR /usr/src/app
 
 # Copy sources
-COPY package*.json ./
+COPY ./package*.json ./
 COPY ./src ./src
+COPY ./.env.template ./
+copy ./docker-entry.sh ./
 
 # Install app dependencies
-#RUN npm install
+RUN apk --update --no-cache add git gettext
 RUN npm install --only=production
+RUN pwd && printenv && ls -la
 
-EXPOSE $STATIC_AUTH_PORT
-EXPOSE $STATIC_AUTH_PORTS
-
-CMD [ "npm", "start" ]
+CMD [ "./docker-entry.sh" ]
