static.client mobile build angular-6.0.7

--- a/static/client/src/environments/consts.ts.template
+++ b/static/client/src/environments/consts.ts.template
@@ -1,7 +1,7 @@
 export const CONSTS = {
   HOSTS: {
-    SELF: 'http://${PROJECT_PARAM_HOST}:${PROJECT_PARAM_PORT}',
-    BIND_SERVICE: 'http://${PROJECT_PARAM_AUTH_HOST}:${PROJECT_PARAM_AUTH_PORT}'
+    SELF: 'http://${COMPONENT_PARAM_HOST}:${COMPONENT_PARAM_PORT}',
+    BIND_SERVICE: 'http://${COMPONENT_PARAM_AUTH_HOST}:${COMPONENT_PARAM_AUTH_PORT}'
   },
   STORAGE: {
     USER: 'currentUser'
