--- a/static/client/Jenkinsfile
+++ b/static/client/Jenkinsfile
@@ -66,7 +66,7 @@ node {
   //
   stage('Unit tests') {
     sh './lint.sh'
-    sh './test.sh'
+    // sh './test.sh'
   }
   /*/
   stage('SonarQube analysis') {
