--- a/sonar-project.properties.template
+++ b/sonar-project.properties.template
@@ -1,17 +1,14 @@
-sonar.projectKey=${PROJECT_NAME}
 sonar.projectName=${PROJECT_NAME}
+sonar.projectKey=${PROJECT_ID}
 sonar.projectVersion=${PROJECT_VERSION}
-sonar.sources=service/src
-sonar.binaries=service/target/classes
-sonar.exclusions=service/src/**/*.test.js,service/src/test/**
+sonar.sources=services/api/src
+sonar.binaries=services/api/target/classes
+sonar.exclusions=services/api/src/test/**
 
 # Java coverage report
-sonar.java.test.binaries=service/target/test-classes
-sonar.java.binaries=service/target/classes
-#sonar.java.libraries=service/target/lib
-sonar.jacoco.reportPath=service/target/coverage-reports/jacoco-ut.exec
-sonar.junit.reportsPath=service/target/surefire-reports
+sonar.java.test.binaries=services/api/target/test-classes
+sonar.java.binaries=servicea/api/target/classes
+#sonar.java.libraries=services/api/target/lib
+sonar.jacoco.reportPath=services/api/target/coverage-reports/jacoco-ut.exec
+sonar.junit.reportsPath=services/api/target/surefire-reports
 sonar.java.coveragePlugin=jacoco
-
-# JS coverage reporting
-#sonar.javascript.lcov.reportPath=bundle/target/coverage/report-lcov/lcov.info
