oauth.io skeleton

--- a/services/auth/.env.template
+++ b/services/auth/.env.template
@@ -9,3 +9,5 @@ COMPONENT_PARAM_SECRET=${COMPONENT_PARAM_SECRET}
 
 COMPONENT_PARAM_PUBLIC_KEY=${COMPONENT_PARAM_PUBLIC_KEY}
 COMPONENT_PARAM_SECRET_KEY=${COMPONENT_PARAM_SECRET_KEY}
+COMPONENT_PARAM_AUTH_KEY_LENGTH=${COMPONENT_PARAM_AUTH_KEY_LENGTH}
+COMPONENT_PARAM_AUTH_TIMEOUT=${COMPONENT_PARAM_AUTH_TIMEOUT}
