Test list of providers

--- a/.env.template
+++ b/.env.template
@@ -22,6 +22,9 @@ SERVICES_AUTH_PORTS=8444
 SERVICES_AUTH_SECRET=${SERVICES_AUTH_SECRET}
 SERVICES_AUTH_PUBLIC_KEY=${SERVICES_AUTH_PUBLIC_KEY}
 SERVICES_AUTH_SECRET_KEY=${SERVICES_AUTH_SECRET_KEY}
+SERVICES_AUTH_AUTH_KEY_LENGTH=${SERVICES_AUTH_AUTH_KEY_LENGTH}
+SERVICES_AUTH_AUTH_TIMEOUT=${SERVICES_AUTH_AUTH_TIMEOUT}
+
 ## [-] AUTH --------------------------------------------------------------------
 
 ## [+] API ---------------------------------------------------------------------
