--- a/static/client/.env.template
+++ b/static/client/.env.template
@@ -1,10 +1,9 @@
-COMPONENT_ID=${COMPONENT_ID}
-COMPONENT_VERSION=${COMPONENT_VERSION}
-
+COMPONENT_ID=com.attlas.static.client
+COMPONENT_VERSION=18.9.0
 COMPONENT_PARAM_HOST=${COMPONENT_PARAM_HOST}
-COMPONENT_PARAM_LSTN=${COMPONENT_PARAM_LSTN}
-COMPONENT_PARAM_PORT=${COMPONENT_PARAM_PORT}
-COMPONENT_PARAM_PORTS=${COMPONENT_PARAM_PORTS}
+COMPONENT_PARAM_LSTN=0.0.0.0
+COMPONENT_PARAM_PORT=9080
+COMPONENT_PARAM_PORTS=9443
 
 COMPONENT_PARAM_AUTH_HOST=${COMPONENT_PARAM_AUTH_HOST}
 COMPONENT_PARAM_AUTH_PORT=${COMPONENT_PARAM_AUTH_PORT}
