--- a/services/auth/.env.template
+++ b/services/auth/.env.template
@@ -1,12 +1,12 @@
-COMPONENT_ID=com.attlas.services.auth
-COMPONENT_VERSION=18.8.0
-COMPONENT_PARAM_HOST=${COMPONENT_PARAM_HOST}
-COMPONENT_PARAM_LSTN=${COMPONENT_PARAM_LSTN}
-COMPONENT_PARAM_PORT=${COMPONENT_PARAM_PORT}
-COMPONENT_PARAM_PORTS=${COMPONENT_PARAM_PORTS}
-COMPONENT_PARAM_CORS_WHITELIST=${COMPONENT_PARAM_CORS_WHITELIST}
+COMPONENT_ID=${PROJECT_ID}.services.auth
+COMPONENT_VERSION=${PROJECT_VERSION}
+
+COMPONENT_PARAM_HOST=${AUTH_COMPONENT_PARAM_HOST}
+COMPONENT_PARAM_LSTN=0.0.0.0
+COMPONENT_PARAM_PORT=9081
+COMPONENT_PARAM_PORTS=9444
+COMPONENT_PARAM_CORS_WHITELIST=${AUTH_COMPONENT_PARAM_CORS_WHITELIST}
 
 ## project specific parameters
-COMPONENT_PARAM_OAUTHIO_PUBLIC_KEY=${COMPONENT_PARAM_OAUTHIO_PUBLIC_KEY}
-COMPONENT_PARAM_OAUTHIO_SECRET_KEY=${COMPONENT_PARAM_OAUTHIO_SECRET_KEY}
-COMPONENT_PARAM_AUTH_TIMEOUT=${COMPONENT_PARAM_AUTH_TIMEOUT}
+COMPONENT_PARAM_OAUTHIO_PUBLIC_KEY=${AUTH_COMPONENT_PARAM_OAUTHIO_PUBLIC_KEY}
+COMPONENT_PARAM_OAUTHIO_SECRET_KEY=${AUTH_COMPONENT_PARAM_OAUTHIO_SECRET_KEY}
