--- a/static/client/package.json
+++ b/static/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.attlas.static.client",
-  "version": "18.8.0",
+  "version": "18.9.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.1.1",
     "@angular/router": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@swimlane/ngx-charts": "^9.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "d3": "^5.0.0",
