docker based working version

--- a/static/client/.env.template
+++ b/static/client/.env.template
@@ -1,9 +1,10 @@
-COMPONENT_ID=com.attlas.static.client
-COMPONENT_VERSION=18.9.0
-COMPONENT_PARAM_HOST=${COMPONENT_PARAM_HOST}
+COMPONENT_ID=${PROJECT_ID}.static.client
+COMPONENT_VERSION=${PROJECT_VERSION}
+
+COMPONENT_PARAM_HOST=${CLIENT_COMPONENT_PARAM_HOST}
 COMPONENT_PARAM_LSTN=0.0.0.0
 COMPONENT_PARAM_PORT=9080
 COMPONENT_PARAM_PORTS=9443
 
-COMPONENT_PARAM_AUTH_HOST=${COMPONENT_PARAM_AUTH_HOST}
-COMPONENT_PARAM_AUTH_PORT=${COMPONENT_PARAM_AUTH_PORT}
+COMPONENT_PARAM_AUTH_HOST=${AUTH_COMPONENT_PARAM_HOST}
+COMPONENT_PARAM_AUTH_PORT=${AUTH_COMPONENT_PARAM_PORT}
