--- a/static/client/Dockerfile
+++ b/static/client/Dockerfile
@@ -10,4 +10,5 @@ ENV COMPONENT_PARAM_LSTN $COMPONENT_PARAM_LSTN
 ENV COMPONENT_PARAM_PORT $COMPONENT_PARAM_PORT
 ENV COMPONENT_PARAM_PORTS $COMPONENT_PARAM_PORTS
 
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 COPY ./dist/ /usr/share/nginx/html/
